--- a/index.html
+++ b/index.html
@@ -8,7 +8,37 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div id="board-container">
+        <div id="board">
+            <div class="cell">
+                <img src="images/x.png">
+            </div>
+            <div class="cell">
+                <img src="images/o.png">
+            </div>
+            <div class="cell">
+                <img src="images/x.png">
+            </div>
+            <div class="cell">
+                <img src="images/o.png">
+            </div>
+            <div class="cell">
+                <img src="images/o.png">
+            </div>
+            <div class="cell">
+                <img src="images/x.png">
+            </div>
+            <div class="cell">
+                <img src="images/x.png">
+            </div>
+            <div class="cell">
+                <img src="images/x.png">
+            </div>
+            <div class="cell">
+                <img src="images/o.png">
+            </div>
+        </div>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
