Add image on click functional

--- a/index.html
+++ b/index.html
@@ -8,34 +8,32 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="board-container">
-        <div id="board">
-            <div class="cell">
-                <img src="images/x.png">
-            </div>
-            <div class="cell">
-                <img src="images/o.png">
-            </div>
-            <div class="cell">
-                <img src="images/x.png">
-            </div>
-            <div class="cell">
-                <img src="images/o.png">
-            </div>
-            <div class="cell">
-                <img src="images/o.png">
-            </div>
-            <div class="cell">
-                <img src="images/x.png">
-            </div>
-            <div class="cell">
-                <img src="images/x.png">
-            </div>
-            <div class="cell">
-                <img src="images/x.png">
-            </div>
-            <div class="cell">
-                <img src="images/o.png">
+    <div id="container">
+        <div id="sidebar">
+            <button id="pvp">PVP</button>
+            <button id="cpu">CPU</button>
+        </div>
+        
+        <div id="board-container">
+            <div id="board">
+                <div class="cell" data-index="0,0">
+                </div>
+                <div class="cell" data-index="0,1">
+                </div>
+                <div class="cell" data-index="0,2">
+                </div>
+                <div class="cell" data-index="1,0">
+                </div>
+                <div class="cell" data-index="1,1">
+                </div>
+                <div class="cell" data-index="1,2">
+                </div>
+                <div class="cell" data-index="2,0">
+                </div>
+                <div class="cell" data-index="2,1">
+                </div>
+                <div class="cell" data-index="2,2">
+                </div>
             </div>
         </div>
     </div>
